--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,9 @@
         "ostream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "fstream": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp"
     }
 }
